changed up the navbar on the header

--- a/app/index.html
+++ b/app/index.html
@@ -21,12 +21,12 @@
     <body>
 
 		<nav ng-controller="MenuController">
-			<h1><a href="#/" title="Mark Chambers - home">K<span class="hideme">y</span><span class="hideme">l</span><span class="hideme">e</span><span class="alt-color">Barlow</span></a> <span class="menu-icon"><span class="bar"></span><span class="bar"></span><span class="bar"></span></span></h1>
+			<h1><a href="#/" title="Kyle Barlow - home">K<span class="hideme">y</span><span class="hideme">l</span><span class="hideme">e</span><span class="alt-color">Barlow</span></a> <span class="menu-icon"><span class="bar"></span><span class="bar"></span><span class="bar"></span></span></h1>
 			<p class="hide-access"><strong>Main navigation:</strong></p>
 			<ul>
-				<li ng-class="{ active: isActive('/about')}"><p><a href="#/about">About <span class="arrow"></span></a></p></li>
-				<li ng-class="{ active: isActive('/clients')}"><p><a href="#/clients">Projects <span class="arrow"></span></a></p></li>
-				<li ng-class="{ active: isActive('/contact')}"><p><a href="#/contact">Contact <span class="arrow"></span></a></p></li>
+				<li ng-class="{ active: isActive('/about')}"><p><a href="#/about">About </span></a></p></li>
+				<li ng-class="{ active: isActive('/clients')}"><p><a href="#/clients">Projects </span></a></p></li>
+				<li ng-class="{ active: isActive('/contact')}"><p><a href="#/contact">Contact </span></a></p></li>
 			</ul>
 		</nav>
 
@@ -38,7 +38,7 @@
 			<article class="notice">
 				<h1>Damnit, no.js</h1>
 				<p>This site uses latest technologies including Javascript, which it looks like it's disabled or your browser doesn't support it.</p>
-				<p>You can contact me on <a href="mailto:&#x6D;&#x65;&#x40;&#x6D;&#x61;&#x72;&#x6B;&#x73;&#x79;&#x2E;&#x63;&#x6F;&#x6D;">&#x6D;&#x65;&#x40;&#x6D;&#x61;&#x72;&#x6B;&#x73;&#x79;&#x2E;&#x63;&#x6F;&#x6D;</a> or phone <span rel="telephone">+447936561301</span>.</p>
+				<p>You can contact me on <a href="kylebarlow@musician.com">&#x6D;&#x65;&#x40;&#x6D;&#x61;&#x72;&#x6B;&#x73;&#x79;&#x2E;&#x63;&#x6F;&#x6D;</a> or phone <span rel="telephone">+447936561301</span>.</p>
 			</article>
 		</noscript>
 
